docs(agents): update AGENTS.md with expanded guidelines and context
- Add detailed explanations of correctness landmines, benchmark discipline, and API design principles.
- Refine scope explanations for dispatch APIs and data sources based on real-world usage patterns.
- Clarify the relationship between `AGENTS.md` and `VECTOR-LAB.md` for branch-specific context.
- Align with recent updates to `jmh/VECTOR.md` to ensure methodology consistency and traceability.